# swd-python-app-2025-06-10

./: .gitignore  Dockerfile  pyproject.toml
src/employees/: __init__.py  repo.py  restcontrollers.py  webcontrollers.py
src/employees/templates/: _formhelpers.html  employees.html
